hrmain.css
.jumbotron{
  background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.25)), url("https://i.imgur.com/5GVJMAn.jpg");
  background-position: center;
  background-size: cover;
  text-align: center;
  color: #f0f0f0;
  font-family: 'Righteous', cursive;
  padding-top: 32px;
  padding-bottom: 32px;
}

#hrGen{
  text-align: center;
}
/* #mwLogo{
  text-align: center;
  box-sizing: border-box;
} */
#breakQ{
  text-align: left;
  padding-bottom: 200px;
}
#breakP{
  text-align: left;
}
#divFine{
  text-align: center;
  position: absolute;
  height: 200px;
  bottom: 0;
  padding-right: 15px;
}
[id^='letDink']{
  margin-left: 50px;
  font-size: 35px;
  font-weight: bold:
  margin-bottom: 15px;
}
[id^='arrDunk']{
  padding-top: 17px;
  margin-left: 40px;
}
body{
  font-family: 'Righteous', cursive;
  background-image: url("https://i.imgur.com/5GVJMAn.jpg");
  background-position: left;
  background-size: cover;
  min-height: 1500px;
  opacity: 0;
}
html{
  font-family: 'Righteous', cursive;
}
p{
  margin: 0;
}
ul{
  font-size: 1.25em;
}
li{
  font-size: .75em;
}
h1{
  text-align: center;
  min-width: 35px;
}
h3{
  text-align: center;
}
h5{
  text-align: center;
}
h6{
  width: 300px;
  padding-left: 10px;
}
#valueSub{
  margin-top: 15px;
  width: 200px;

}
#acronymIP{
  width: 200px;

}
#fineprint{
  font-size: 0.50em;
}
#logo{
  height: 120px;
  width: 120px;
}
#ablogo{
  height: 300px;
  width: 300px;
}
@media (max-width: 1024px) {
  #vecDivTwo {
   flex-direction: column;
  }
  #itemVec{
    align-items: center;
    justify-content: center;
    text-align: center;
    display: block;
    padding: 10px;
  }
}

